--- a/promotional-sms.html
+++ b/promotional-sms.html
@@ -7,9 +7,9 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
 <meta charset="UTF-8">
-<title>Promotional SMS Service India | Bulk Promotional SMS Service | GreenOrbit SMS</title>
+<title>Promotional SMS Service India | Bulk Promotional SMS Service | GaneshTradeLink SMS</title>
 <meta name="description"
-	content="GreenOrbit SMS brings to you exclusive promotional SMS service in India. Boost your business with
+	content="GaneshTradeLink SMS brings to you exclusive promotional SMS service in India. Boost your business with
 promotional SMS service.">
 <meta name="keywords"
 	content="Promotional SMS, Promotional SMS Service, Bulk Promotional SMS">
@@ -49,7 +49,7 @@ promotional SMS service.">
 			
 		
 			
-				<li><a class="button button-secondary" href="http://sms.GreenOrbit.co/">
+				<li><a class="button button-secondary" href="https://GaneshTradeLink.online/">
 					<i class="fa fa-lock icon-left"></i>Client Login
 			</a></li>
 			
@@ -62,7 +62,7 @@ promotional SMS service.">
 			
 			</ul>
 			<ul class="nav-secondary">
-				<li><a href="contact.html"><i class="fa fa-phone icon-left"></i>+91-6356543841</a></li>
+				<li><a href="contact.html"><i class="fa fa-phone icon-left"></i>+91-9662762810</a></li>
 			
 
 			</ul>
@@ -208,7 +208,7 @@ promotional SMS service.">
 				<div class="column-row align-center-bottom">
 					<div class="column-33">
 						<div class="testimonial">
-							<p class="testimonial-content">GreenOrbit SMS has increased our
+							<p class="testimonial-content">GaneshTradeLink SMS has increased our
 								reach and business to a previously, unimaginably great extent.</p>
 							<p class="testimonial-author">
 								<a href="#twitter"></a>Ramesh
@@ -218,7 +218,7 @@ promotional SMS service.">
 					</div>
 					<div class="column-33">
 						<div class="testimonial">
-							<p class="testimonial-content">Without GreenOrbit SMS we wouldn't
+							<p class="testimonial-content">Without GaneshTradeLink SMS we wouldn't
 								acquire success in such a competitive environment.</p>
 							<p class="testimonial-author">
 								<a href="#twitter"></a>Mallikarjun
@@ -228,7 +228,7 @@ promotional SMS service.">
 					</div>
 					<div class="column-33">
 						<div class="testimonial">
-							<p class="testimonial-content">GreenOrbit SMS has given our
+							<p class="testimonial-content">GaneshTradeLink SMS has given our
 								marketing department an edge against our competitors.</p>
 							<p class="testimonial-author">
 								<a href="#twitter"></a>Parth Patel<br> 
@@ -262,14 +262,14 @@ promotional SMS service.">
 		<div class="container">
 			<div class="column-row">
 				<div class="column-33">
-					<h5>About Green Orbit</h5>
+					<h5>About Ganesh TradeLink</h5>
 					<p>
 					We provide BULK SMS, VOICE SMS, INTERNATIONAL SMS, MEDIA
 						MARKETING, TOLL FREE, MISSED CALL & CAMPAIGN MANAGEMENT services.<br>
 						Feel free to visit or contact us for a custom quote.<br> <br>
-						Address:<br>3, JAY KHODIAR IND ESTATE, NR. SUBHASH ESTATE,<br>
-						RAMOL ROAD,AHEMEDABAD,GUJARAT, INDIA.380026<br> Phone Number: +91 6356543841<br>
-						Email: green.orbit.enterprise@gmail.com<br>
+						Address:<br>SHOP NO-7,SURAMYA GOLD,<br>
+						NR SOLA BHAGWAT VIDYAPITH,AHEMEDABAD,GUJARAT, INDIA.380060<br> Phone Number: +91 9662762810<br>
+						Email: info@ganeshtradelink.online<br>
 
 					</p>
 				</div>
@@ -278,7 +278,7 @@ promotional SMS service.">
 						<div class="column-25">
 							<h5>Connect</h5>
 							<ul class="list-style-icon">
-									<li><a href="https://www.facebook.com/GreenOrbitenterprise"><i class="fa fa-facebook"></i>Facebook</a>
+									<li><a href="https://www.facebook.com/ganeshtradelink1"><i class="fa fa-facebook"></i>Facebook</a>
 								
 
 							</ul>
@@ -301,8 +301,8 @@ promotional SMS service.">
 	<section class="footer-secondary">
 		<div class="container">
 			<p>
-				Copyright 2017-2023 &copy; Green Orbit Enterprise. All rights reserved.<br> Powered
-			 by <a href="index.html">Green Orbit Enterprise</a>
+				Copyright 2017-2024 &copy; Ganesh TradeLink. All rights reserved.<br> Powered
+			 by <a href="index.html">Ganesh TradeLink</a>
 			</p>
 		</div>
 	</section>
@@ -320,7 +320,7 @@ promotional SMS service.">
 
 
 
-<!-- Mirrored from GreenOrbit SMS.com/promotional-sms.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Jul 2020 05:32:56 GMT -->
+<!-- Mirrored from GaneshTradeLink SMS.com/promotional-sms.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Jul 2020 05:32:56 GMT -->
 
-<!-- Mirrored from GreenOrbit.co/promotional-sms.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 23 Aug 2023 11:05:07 GMT -->
+<!-- Mirrored from GaneshTradeLink.co/promotional-sms.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 23 Aug 2023 11:05:07 GMT -->
 </html>
